--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"express": "^4.16.4",
 		"helmet": "^3.15.0",
 		"knex": "^0.16.3",
+		"nodemon": "^1.18.9",
 		"sqlite3": "^4.0.6"
 	},
 	"devDependencies": {
